# Hydrolox

./: .gitignore  CMakeLists.txt  README.md  main
.cache/clangd/index/: main.cpp.2B554749DB0D5FF3.idx
include/: ast.hpp  astPrinter.hpp  generator.hpp  lexer.hpp  parser.hpp  sema.hpp  types.hpp
src/: main.cpp  types.cpp
test/: main.hlox
tools/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tools/bindings/c/: tree-sitter-hydrolox.pc.in
tools/bindings/c/tree_sitter/: tree-sitter-hydrolox.h
tools/bindings/go/: binding.go  binding_test.go
tools/bindings/node/: binding.cc  index.d.ts  index.js
tools/bindings/python/tests/: test_binding.py
tools/bindings/python/tree_sitter_hydrolox/: __init__.py  binding.c
tools/bindings/rust/: build.rs  lib.rs
tools/bindings/swift/TreeSitterHydroloxTests/: TreeSitterHydroloxTests.swift
tools/src/: grammar.json  node-types.json  parser.c
