[package]
name = "tree-sitter-hydrolox"
description = "Tree-sitter grammar for the low level Hydrolox programming language"
version = "0.1.0"
authors = ["TheMasterofWorlds99 <eleyow@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hydrolox"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/themasterofworlds99/hydrolox/tree/main"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
